--- a/example/index.html
+++ b/example/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+<head>
+  <style>
+    li:hover { cursor: pointer}
+    .bg-red { background-color: red}
+    .bg-white { background-color: white}
+  </style>
+</head>
   <body>
     <div id="app"></div>
     <script src="../lib/js/example/App.js"></script>
