--- a/example/index.html
+++ b/example/index.html
@@ -9,6 +9,6 @@
 </head>
   <body>
     <div id="app"></div>
-    <script src="../lib/js/example/App.js"></script>
+    <script type="module" src="../lib/es6/example/App.js"></script>
   </body>
 </html>
