--- a/example/index.html
+++ b/example/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>Example</title>
   <style>
     li:hover { cursor: pointer}
     .bg-red { background-color: red}
